k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: self-healing-backend-svc
  namespace: self-healing-app
  labels:
    app: self-healing-backend
spec:
  selector:
    app: self-healing-backend
  ports:
  - name: http
    port: 5000
    targetPort: 5000
  type: ClusterIP
