k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: self-healing-frontend-svc
  namespace: self-healing-app
spec:
  selector:
    app: self-healing-frontend
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
